--- a/src/css/style.css
+++ b/src/css/style.css
@@ -14,6 +14,7 @@ body{
     padding: 40px 0px;
     align-items: center;
     background-color: rgba(240, 248, 255, 0.658);
+    text-align: center;
 }
 
 h1{
@@ -25,9 +26,7 @@ h1{
     width: 80%;
     font-weight: 400;
     display: flex;
-    
     flex-direction: column;
-    align-items: flex-start;
     gap: 30px;
 }
 
